--- a/first/index.html
+++ b/first/index.html
@@ -6,9 +6,11 @@
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
-    <div class="header"></div>
+
+    <div class="header">
       <div class="one"></div>
       <div class="two"></div>
+      <div class="thre"></div>
    </div>
        <div>
             <h3>“Life before Death.
@@ -17,14 +19,14 @@ Journey before Destination.” </h3>
           <p>“And so, does the destination matter? Or is it the path we take? I declare that no accomplishment has substance nearly as great as the road used to achieve it. We are not creatures of destinations. It is the journey that shapes us. Our callused feet, our backs strong from carrying the weight of our travels, our eyes open with the fresh delight of experiences lived.”
          </p>
       </div>
-         <div id="txt"><p>― Brandon Sanderson, The Way of Kings</p></div>
-     <div class="container">
-       <div class="box"></div>
-     </div>
-        <div class="footer">
-          <div class="three"></div>
-          <div class="four"></div>
-        </div>
+      <div id="txt"><p>― Brandon Sanderson, The Way of Kings</p></div>
+       <div class="container">
+         <div class="box"></div>
+       </div>
+      <div class="footer">
+        <div class="three"></div>
+        <div class="four"></div>
+      </div>
 
 
 
