--- a/wikipage/pro/index.html
+++ b/wikipage/pro/index.html
@@ -13,34 +13,34 @@
    </div>
    <div class="container">
      <div class="row1">
-       <img src="/static/images/project-logos/enwiki.png" srcset="/static/images/project-logos/enwiki-1.5x.png, /static/images/project-logos/enwiki-2x.png 2x" width="150" height="150" alt="Wikipedia">
-       <img src="//upload.wikimedia.org/wikipedia/commons/thumb/f/ff/WiktionaryEn.svg/135px-WiktionaryEn.svg.png" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/f/ff/WiktionaryEn.svg/203px-WiktionaryEn.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/f/ff/WiktionaryEn.svg/270px-WiktionaryEn.svg.png 2x" width="150" height="150" alt="Wiktionary">
-       <img src="/static/images/project-logos/wikiquote.png" srcset="//upload.wikimedia.org/wikipedia/meta/7/7a/Wikiquote-logo_project_1.5x.png 1.5x, //upload.wikimedia.org/wikipedia/meta/5/5b/Wikiquote-logo_project_2x.png 2x" width="150" height="150" alt="Wikiquote">
-       <img src="/static/images/project-logos/wikibooks.png" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/d/df/Wikibooks-logo-en-noslogan.svg/203px-Wikibooks-logo-en-noslogan.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/d/df/Wikibooks-logo-en-noslogan.svg/270px-Wikibooks-logo-en-noslogan.svg.png 2x" width="150" height="150" alt="Wikibooks">
+       <a href="https://www.wikipedia.org/"><img src="/static/images/project-logos/enwiki.png" srcset="/static/images/project-logos/enwiki-1.5x.png, /static/images/project-logos/enwiki-2x.png 2x" width="150" height="150" alt="Wikipedia"></a>
+       <a href="https://www.wiktionary.org/"><img src="//upload.wikimedia.org/wikipedia/commons/thumb/f/ff/WiktionaryEn.svg/135px-WiktionaryEn.svg.png" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/f/ff/WiktionaryEn.svg/203px-WiktionaryEn.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/f/ff/WiktionaryEn.svg/270px-WiktionaryEn.svg.png 2x" width="150" height="150" alt="Wiktionary"></a>
+       <a href="https://www.wikiquote.org/"><img src="/static/images/project-logos/wikiquote.png" srcset="//upload.wikimedia.org/wikipedia/meta/7/7a/Wikiquote-logo_project_1.5x.png 1.5x, //upload.wikimedia.org/wikipedia/meta/5/5b/Wikiquote-logo_project_2x.png 2x" width="150" height="150" alt="Wikiquote"></a>
+       <a href="https://www.wikibooks.org/"><img src="/static/images/project-logos/wikibooks.png" srcset="//upload.wikimedia.org/wikipedia/commons/thumb/d/df/Wikibooks-logo-en-noslogan.svg/203px-Wikibooks-logo-en-noslogan.svg.png 1.5x, //upload.wikimedia.org/wikipedia/commons/thumb/d/df/Wikibooks-logo-en-noslogan.svg/270px-Wikibooks-logo-en-noslogan.svg.png 2x" width="150" height="150" alt="Wikibooks"></a>
      </div>
    </div>
    <div class="container">
      <div class="row2">
-       <img src="/static/images/project-logos/wikisource.png" width="150" height="150" alt="Wikisource">
-       <img src="//upload.wikimedia.org/wikinews/en/b/bc/Wiki.png" width="150" height="150" alt="Wikinews">
-       <img src="/static/images/project-logos/enwikiversity.png" width="150" height="150" alt="Wikiversity">
-       <img src="/static/images/project-logos/specieswiki.png" width="150" height="150" alt="Wikispecies">
+       <a href="https://wikisource.org/"><img src="/static/images/project-logos/wikisource.png" width="150" height="150" alt="Wikisource"></a>
+       <a href="https://www.wikinews.org/"><img src="//upload.wikimedia.org/wikinews/en/b/bc/Wiki.png" width="150" height="150" alt="Wikinews"></a>
+       <a href="https://www.wikiversity.org/"><img src="/static/images/project-logos/enwikiversity.png" width="150" height="150" alt="Wikiversity"></a>
+       <a href="https://species.wikimedia.org/"><img src="/static/images/project-logos/specieswiki.png" width="150" height="150" alt="Wikispecies"></a>
      </div>
    </div>
    <div class="container">
      <div class="row3">
-       <img src="/static/images/project-logos/mediawikiwiki.png" width="150" height="150" alt="MediaWiki">
-       <img src="/static/images/project-logos/wikidatawiki.png" width="150" height="150" alt="Wikidata">
-       <img src="/static/images/project-logos/commonswiki.png" width="150" height="150" alt="Wikimedia Commons">
-       <img src="/static/images/project-logos/wikivoyage.png" width="150" height="150" alt="Wikivoyage">
+       <a href="https://www.mediawiki.org/"><img src="/static/images/project-logos/mediawikiwiki.png" width="150" height="150" alt="MediaWiki"></a>
+       <a href="https://www.wikidata.org/"><img src="/static/images/project-logos/wikidatawiki.png" width="150" height="150" alt="Wikidata"></a>
+       <a href="https://commons.wikimedia.org/"><img src="/static/images/project-logos/commonswiki.png" width="150" height="150" alt="Wikimedia Commons"></a>
+       <a href="https://www.wikivoyage.org/"><img src="/static/images/project-logos/wikivoyage.png" width="150" height="150" alt="Wikivoyage"></a>
      </div>
    </div>
    <div class="container">
      <div class="row4">
-       <img src="/static/images/project-logos/metawiki.png" srcset="/static/images/project-logos/metawiki-1.5x.png 1.5x, /static/images/project-logos/metawiki-2x.png 2x" width="150" height="150" alt="Meta-Wiki">
-       <img src="/static/images/project-logos/incubatorwiki.png" width="150" height="150" alt="Wikimedia Incubator">
-       <img src="//wikitech.wikimedia.org/w/images/c/cf/Labslogo_thumb.png" width="150" height="150" alt="Wikimedia Labs">
-       <img src="/static/images/project-logos/foundationwiki.png" srcset="/static/images/project-logos/foundationwiki-1.5x.png 1.5x, /static/images/project-logos/foundationwiki-2x.png 2x" width="150" height="150" alt="Wikimedia Foundation">
+       <a href="https://meta.wikimedia.org/"><img src="/static/images/project-logos/metawiki.png" srcset="/static/images/project-logos/metawiki-1.5x.png 1.5x, /static/images/project-logos/metawiki-2x.png 2x" width="150" height="150" alt="Meta-Wiki"></a>
+       <a href="https://incubator.wikimedia.org/"><img src="/static/images/project-logos/incubatorwiki.png" width="150" height="150" alt="Wikimedia Incubator"></a>
+       <a href="https://wikitech.wikimedia.org/"><img src="//wikitech.wikimedia.org/w/images/c/cf/Labslogo_thumb.png" width="150" height="150" alt="Wikimedia Labs"></a>
+       <a href="https://wikimediafoundation.org/"><img src="/static/images/project-logos/foundationwiki.png" srcset="/static/images/project-logos/foundationwiki-1.5x.png 1.5x, /static/images/project-logos/foundationwiki-2x.png 2x" width="150" height="150" alt="Wikimedia Foundation"></a>
      </div>
    </div>
    <div class="footer">
