--- a/webclone/index.html
+++ b/webclone/index.html
@@ -143,6 +143,50 @@ solves unique problems, works better and turns ideas into functional reality.
         </div>
       </div>
     </div>
+    <div class="background">
+      <div class="content">
+        <div>Let's Talk</div>
+        <div id="box-1"></div>
+        <p>Like what you saw? We'd love to talk with you about your next project.</p>
+      </div>
+      <div class="w6-btn">
+        <a href="http://wideopentech.com/contact">Email Us</a>
+      </div>
+    </div>
+    <div class="location">
+      <div class="location-img">
+       <img src="http://cdn01.wideopentech.com/themes/wot-2013-gm/_/img/wilmington.jpg" width="639" height="500" class=" img-responsive" alt="wilmington">
+     </div>
+         <div class="location-left">
+          <h1>Wilmington</h1>
+          <div>1994-400 Eastwood Road</div>
+          <div>Wilmington, NC 28403</div>
+          <div>866-465-6188</div>
+          <div>ocean@wideopentech.com</div>
+      </div>
+      <div class="location-img1">
+        <img src="http://cdn01.wideopentech.com/themes/wot-2013-gm/_/img/asheville.jpg" width="640" height="500" class=" img-responsive" alt="wilmington">
+      </div>
+      <div class="location-right">
+        <h1>Asheville</h1>
+        <div>56 Ravenscroft Dr</div>
+        <div>Asheville, NC 28801</div>
+        <div>866-465-6188</div>
+        <div>mountain@wideopentech.com</div>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="wideopen">
+        <div>© 2016 Wide Open Technologies - <a href="http://wideopentech.com/site/privacy">Privacy</a></div>
+        <a href="http://wideopentech.com/services/ecommerce">SERVICES</a>
+        <a href="http://wideopentech.com/company">COMPANY</a>
+        <a href="http://wideopentech.com/portfolio">PORTFOLIO</a>
+        <a href="http://wideopentech.com/careers">CAREERS</a>
+        <a href="http://wideopentech.com/blog">BLOG</a>
+        <a href="http://wideopentech.com/contact">CONTACT</a>
+      </div>
+
+    </div>
 
 
 
