--- a/webclone/index.html
+++ b/webclone/index.html
@@ -20,11 +20,11 @@
       <div class="bigpic">
         <img class="irc_mi iCLa5_hm6n4c-pQOPx8XEepE" alt="" style="margin-top: 0px; width: 100%; height: 510px;" src="https://media.glassdoor.com/l/c1/de/2b/83/employee-working.jpg" width="100%" height="393">
           <div class="txt">
-            <div id="txt-11">YOUR DIGITAL</div>
-            <div id="txt2">WORKSHOP</div>
-            <div id="box"></div>
-            <div id="txt3">Building Business <span class="colortxt"> Solutions </span> & Bright <span class="colortxt1"> Ideas </div>
-            <div id="box1"></div>
+            <div class="txt-11">YOUR DIGITAL</div>
+            <div class="txt2">WORKSHOP</div>
+            <div class="box"></div>
+            <div class="txt3">Building Business <span class="colortxt"> Solutions </span> & Bright <span class="colortxt1"> Ideas </div>
+            <div class="box1"></div>
           </div>
             <div class="w3-btn"><a href="http://wideopentech.com/services">Learn more</a></div>
           </div>
